Fix sign up form layout on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -612,7 +612,7 @@ tr:nth-child(even){
 
 @media screen and (max-width: 736px){
     #regForm {width: 95%; left: auto; right: auto; min-width: 300px; margin-left: 8px;}
-    .full-width {width: auto;}
+    .full-width {width: 90%; margin-left: auto; margin-right: auto; display: block;}
 }
 
 @media screen and (max-width: 568px){
